excluding UN/EDIFACT test harness tests for Bamboo builds - VMs don't have enough mem