@@ -12,6 +12,36 @@
     <artifactId>milyn-smooks-edi-test</artifactId>
     <packaging>jar</packaging>
 
+    <profiles>
+        <profile>
+            <id>all-tests</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <!--
+            Need to exclude the UN/EDIFACT test harness tests on bamboo because
+            of VM memory restrictions there.
+            -->
+            <id>bamboo</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.8.1</version>
+                        <configuration>
+                            <excludes>
+                                <exclude>org/milyn/edi/test/unedifact/**</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
     <dependencies>
 
         <dependency>
@@ -44,19 +74,5 @@
         </dependency>
 
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.8.1</version>
-                <configuration>
-                    <forkMode>once</forkMode>
-                    <argLine>-Xms128m -Xmx512m -XX:MaxPermSize=512m</argLine>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
